<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_weight="1"
        android:background="@drawable/dialog_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/dialog_title"
            android:textSize="30sp"
            android:background="#6495ED"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:text="@string/dialog_unit_price"
                android:id="@+id/textView_unitPrice"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dialog_zero"
                android:id="@+id/tv_unitPrice"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:text="@string/dialog_current_amount"
                android:id="@+id/textView7"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dialog_zero"
                android:id="@+id/tv_ordernum"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04"
            android:gravity="center">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgroup"
                android:paddingLeft="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_order"
                    android:id="@+id/rb_Order"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_cancel_order"
                    android:id="@+id/rb_CancelOrder"
                    android:layout_gravity="center_horizontal"
                    android:checked="false" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:text="@string/dialog_amount"
                android:id="@+id/textView4"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edt_ordernum" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_ok"
                android:id="@+id/button_ok"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_ok"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:id="@+id/button_cancel"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_cancel"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
