<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="@drawable/dialog_background">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bell_title"
            android:id="@+id/bell_title"
            android:textSize="30sp"
            android:background="#FFBB00"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/dialog_bell_msg"
                android:id="@+id/textView5"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_ok"
                android:id="@+id/button_table_ok"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_ok"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:id="@+id/button_table_cancel"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/btn_cancel"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
